# binary-data-schema

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
bds-cli/: Cargo.toml  README.md
binary-data-schema/: CHANGELOG.md  Cargo.toml  README.md
binary-data-schema/examples/led-power/: schema.json  valid-1.json  valid-1.txt
binary-data-schema/examples/led-rgb/: schema.json  valid-1.json  valid-1.txt
binary-data-schema/src/: array.rs  boolean.rs  integer.rs  lib.rs  main.rs  number.rs  object.rs  string.rs  util.rs
binary-data-schema/test-files/1/: invalid.json  schema.json  valid.json
ld/: README.md  bds.ttl  context.jsonld
