[package]
name = "binary-data-schema"
version = "0.1.1"
authors = ["Matthias Farnbauer-Schmidt <matthias.farnbauer-schmidt@fau.de>"]
edition = "2018"
description = "Meta language for raw binary serialization"
repository = "https://github.com/wintechis/binary-data-schema"
readme = "README.md"
homepage = "https://github.com/wintechis/binary-data-schema"
license = "AGPL-3.0"
keywords = ["binary", "schema"]
categories = ["data-structures", "encoding"]
documentation = "https://docs.rs/binary-data-schema/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
byteorder = "1.3"
bstr = "0.2"
hex = "0.4"
anyhow = "1.0"
structopt = "0.3"

[dev-dependencies]
